fixed another scrollbar bug

--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -43,7 +43,7 @@ $page-content-sidebar-width-dsbj: 27.2rem;
 $page-content-main-width-dsbj: calc(
     #{$site-max-width} - (#{$page-content-sidebar-width-dsbj})
 );
-$page-content-height-desktop: calc(100vh - #{$header-height} - #{$tab-height});
+$page-content-height-desktop: calc(99vh - #{$header-height} - #{$tab-height});
 $page-content-height-mobile: calc(100vh - #{$header-height});
 
 /* BUTTON */
