--- a/imports/client/styles/components/page-main/_message.scss
+++ b/imports/client/styles/components/page-main/_message.scss
@@ -1,7 +1,7 @@
 .message-list {
     height: 100%;
     padding-right: calc(#{$large-space} + #{$input-spacing});
-    overflow-y: auto;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 
     &::-webkit-scrollbar {
